# ChangeLog for dev-lang/swig
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-lang/swig/ChangeLog,v 1.96 2007/07/31 12:58:47 hkbst Exp $

  31 Jul 2007; Marijn Schouten <hkBst@gentoo.org> metadata.xml:
  take over maintainership

  14 Jul 2007; Christian Heim <phreak@gentoo.org> metadata.xml:
  Assigning dev-lang/swig to m-needed, as chriswhite has been retired (#56211).

  12 Jul 2007; Roy Marples <uberlord@gentoo.org> swig-1.3.31.ebuild:
  Keyworded ~sparc-fbsd

  13 May 2007; Joshua Kinard <kumba@gentoo.org> swig-1.3.31.ebuild:
  Stable on mips.

  27 Feb 2007; Piotr Jaroszyński <peper@gentoo.org> swig-1.3.25.ebuild:
  Fix incomplete dev-lisp/mzscheme -> dev-scheme/mzscheme move.

  15 Feb 2007; Bryan Østergaard <kloeri@gentoo.org> swig-1.3.31.ebuild:
  Stable on Alpha, bug 166246.

  14 Feb 2007; Bryan Østergaard <kloeri@gentoo.org> swig-1.3.31.ebuild:
  Stable on IA64, bug 166246.

  13 Feb 2007; Lars Weiler <pylon@gentoo.org> swig-1.3.31.ebuild:
  Stable on ppc; bug #166246.

  13 Feb 2007; Markus Rothe <corsair@gentoo.org> swig-1.3.31.ebuild:
  Stable on ppc64; bug #166246

  12 Feb 2007; Marcus D. Hanwell <cryos@gentoo.org> swig-1.3.31.ebuild:
  Stable on amd64, bug 166246.

  12 Feb 2007; Gustavo Zacarias <gustavoz@gentoo.org> swig-1.3.31.ebuild:
  Stable on sparc

  12 Feb 2007; Jeroen Roovers <jer@gentoo.org> swig-1.3.31.ebuild:
  Stable for HPPA (bug #166246).

  11 Feb 2007; Christian Faulhammer <opfer@gentoo.org> swig-1.3.31.ebuild:
  stable x86; security bug #166246

  11 Feb 2007; Fabian Groffen <grobian@gentoo.org> swig-1.3.25.ebuild,
  swig-1.3.27.ebuild, swig-1.3.29.ebuild, swig-1.3.29-r1.ebuild,
  swig-1.3.31.ebuild:
  Dropped ppc-macos keyword, see you in prefix

  10 Jan 2007; Piotr Jaroszyński <peper@gentoo.org> Manifest:
  Fix Manifest.

  10 Jan 2007; <marijn@gentoo.org> swig-1.3.29-r1.ebuild:
  Dependency update: dev-util/guile -> dev-scheme/guile.
