@@ -2,8 +2,10 @@ AUX swig-const.patch 1343 RMD160 12b783de48888237d5b58726501e6299393c222b SHA1 e
 DIST swig-1.3.27.tar.gz 3635865 RMD160 075eaf9ce4589329f0a503817500bf0e216e9fad SHA1 21e2953078fcf26080cfb944f226887da8bdc70e SHA256 ac9996884bf1e37406fde41c6a371b282813936bb6930da4481a8e90a8ead104
 DIST swig-1.3.29.tar.gz 4018019 RMD160 3818fae5818a235dd09d5c47a52ad751ae21526b SHA1 517181c464b9dfa80baba7385d5901e11b01c634 SHA256 68b1b032cdc6297f068ef8c3c09abdd46a08512e17705d477cc0bf7b80a550e8
 DIST swig-1.3.31.tar.gz 4177499 RMD160 7f2c8edec5875bd21138bb00070f214d14ed1894 SHA1 3369543fa178bdeaa597dba806be04b9c8d0f12c SHA256 c2ad63095e34b4a474e7ff4adb6ea8b7ab238bb5738d00a739102bb8bb71d805
+DIST swig-1.3.32.tar.gz 4409358 RMD160 de9aed91799b11d99b658f5caeb52706109693d6 SHA1 b706b48168f88065633964040f26b129c7aefb36 SHA256 22a175de0e30e284a6aa80991b768820e11abf4629f4eeb21e86e7a2d3708d9e
 EBUILD swig-1.3.27.ebuild 1663 RMD160 9eb66db7279d3c27855cc87b93c04fb84a141c5f SHA1 ba256c6e8467c3239cfc20da54f6a875215d79ef SHA256 27a2ce44b2a9abfc4d6b3dc6f982ad155d9913ddea092834d27cf4e5f6970f78
 EBUILD swig-1.3.29-r1.ebuild 1794 RMD160 845ad5e0ac34bb0fa59ad9942e78fc3d98f657a1 SHA1 45c2ec2ef69c9dd31a3dc40ed4dd86e118461e8d SHA256 87f9928d63cad100af12083eb2874e123708c484d321025c37ad0c9c23d0f340
 EBUILD swig-1.3.31.ebuild 1665 RMD160 8e53f48e565a4147864e436e7495175bd107f001 SHA1 8b507d7283fd0ecddc7c463c97ef4ad648e8eeef SHA256 a4675f6f240de378107094c9b918a669266372071cee417c63588fdbf2117f52
-MISC ChangeLog 11318 RMD160 c99d1d0b570bed12a6f721ebfb66d68e4197dba2 SHA1 f91cd7fb569ad9b95fd71e1e23d82c8fd0db0c6c SHA256 356b5a23bff69fb8f65ece1fed390ffe0570c967e472023488420e21e767577a
+EBUILD swig-1.3.32.ebuild 1904 RMD160 0b958a819f681abbc75c50dfc7a39bb9c2363665 SHA1 41877cadc809e0bb4150380c59f8ea1a115618be SHA256 1c4de196f9ee28b13d96cf7931e4021cd5cec995a6fa610cc8c4442a70ddb9dc
+MISC ChangeLog 11529 RMD160 6b510c89ecf3caffbce1a4bb4eeae493b96f3101 SHA1 bb4a2e972513fb13771435aa13033b8f4086b6a7 SHA256 99b0dfbf46788e9dbe33bde1d7e210e9ffdfc8fb74420fd3eaa931a4ee71dcd8
 MISC metadata.xml 766 RMD160 6346d7b3f9b663c1c4f6daf925b9f4420c90b628 SHA1 01fc3aaaec12c0e87220211c6105297c1105f126 SHA256 67c6f90bc2ebfd158086afc5b50744597c0477196fa5bc3314a9643516611b1c
