@@ -1,6 +1,12 @@
 # ChangeLog for dev-lang/swig
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-lang/swig/ChangeLog,v 1.96 2007/07/31 12:58:47 hkbst Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-lang/swig/ChangeLog,v 1.97 2007/11/16 15:10:25 hkbst Exp $
+
+*swig-1.3.32 (16 Nov 2007)
+
+  16 Nov 2007; Marijn Schouten <hkBst@gentoo.org> +swig-1.3.32.ebuild:
+  bump; add chicken, clisp, mzscheme and R use flags, deps and use_with's;
+  drop keywords because of new deps
 
   31 Jul 2007; Marijn Schouten <hkBst@gentoo.org> metadata.xml:
   take over maintainership
